# TheLambdaReactor

./: .gitignore  Example.hs  GameState.elm  LICENSE  README.md  Setup.hs  TheLambdaReactor.cabal  elm-build.bat  elm-build.sh  elm-package.json  index.html  main.html  stack.yaml  styles.css
.stack-work/install/x86_64-linux/ghc-7.8.4/7.8.4/flag-cache/: HUnit-1.3.0.0-aaca17c8d9e074ab550a9b214ad71dae  MonadCatchIO-transformers-0.3.1.3-e78728cf6cc3000d0f98b1bdfadf6b2c  MonadRandom-0.4.1-9b8e80c523c0ed2db1031c44fb00d53f  SHA-1.6.4.2-f5b7199ffce4ee302c5d6b679ebe4110  StateVar-1.1.0.2-57375336d3c92470edd530b1e8a20f9b  adjunctions-4.2.2-952c7367fc6e38245d905132d2b300bf  aeson-0.10.0.0-b216e0e4297d286d09b8f2a9d555a82f  async-2.0.2-4067de920f8af80694a2f7522baa0cd0  attoparsec-0.13.0.1-bc51f0f19b789cb2163511ef893f77ca  attoparsec-enumerator-0.3.4-82141cff79cef3e295d2be1c3ec85129  base-orphans-0.4.5-2564f6bf3f8ea56dbc79de8e37ae83b6  base64-bytestring-1.0.0.1-c51a530d028bd5ed45a5d898ef0f29b6  bifunctors-5.1-8fd4bbb0f685c06f126e968c57199f7f  blaze-builder-0.4.0.1-1febcf61b3802cffe3d297d4ff2edde9  blaze-builder-enumerator-0.2.1.0-936d9e85abf36a469247f86dcefa7eed  blaze-html-0.8.1.1-d7c3f1f8b44e64516b7cf0dacab43660  blaze-markup-0.7.0.3-87703f3ecfddef6e58ae38d2485a0e8d  byteable-0.1.1-57cf3ed3fe40ad74757dc78f07ce6b23  bytestring-builder-0.10.6.0.0-57c8091ea57afec62c051eda2322cc2f  bytestring-mmap-0.2.2-4e46897f220ee3850d3cf4352051f62b  case-insensitive-1.2.0.5-5aef3d2d65487cd5543287b96dad475e  cereal-0.5.1.0-58828a2edb4f93a951cde6b70dc28b3a  cipher-aes-0.2.11-78177c60707aeea464fcffa2f7495059  clientsession-0.9.1.1-77cc87fe894cc088b16fb19533abcedf  comonad-4.2.7.2-219d41b7012e7329af1b0a92c96c0a83  configurator-0.3.0.0-b646821b9f7f92ebe38569d600a295dd  contravariant-1.3.3-044b269f17d761cf6bf59a84f3700350  cprng-aes-0.6.1-d1f1677b7ebcca6651dd4b0ea838612c  crypto-api-0.13.2-01148c1814ac890611edd72b42794aff  crypto-cipher-types-0.0.9-35208cc4573ab123db1299815a7304a8  crypto-random-0.0.9-315a2039e23a28fbacf04e394e4e7eda  cryptohash-0.11.6-18ed5a92987eb81dd7163f45089d629c  directory-tree-0.12.0-1a2ac94346f18481d9977872d1266b0b  distributive-0.4.4-c10f6d8f4f444057d65ab52cf0d332f5  dlist-0.7.1.2-5a569a91e2f4a1de5ecfed41853f1604  either-4.4.1-07fbd980549b3e81981803444035a609  engine-io-1.2.11-81c3fedfab5358009b757558e3f8a110  engine-io-snap-1.0.3-552c16ced4338302d661b711b6e6888a  entropy-0.3.7-f6026926e19f9b22e5951fc8932eb205  enumerator-0.4.20-58a689a5bc8785fb355f45677510d535  (+58 more)
.stack-work/install/x86_64-linux/ghc-7.8.4/7.8.4/pkgdb/: HUnit-1.3.0.0-aaca17c8d9e074ab550a9b214ad71dae.conf  MonadCatchIO-transformers-0.3.1.3-e78728cf6cc3000d0f98b1bdfadf6b2c.conf  MonadRandom-0.4.1-9b8e80c523c0ed2db1031c44fb00d53f.conf  SHA-1.6.4.2-f5b7199ffce4ee302c5d6b679ebe4110.conf  StateVar-1.1.0.2-57375336d3c92470edd530b1e8a20f9b.conf  adjunctions-4.2.2-952c7367fc6e38245d905132d2b300bf.conf  aeson-0.10.0.0-b216e0e4297d286d09b8f2a9d555a82f.conf  async-2.0.2-4067de920f8af80694a2f7522baa0cd0.conf  attoparsec-0.13.0.1-bc51f0f19b789cb2163511ef893f77ca.conf  attoparsec-enumerator-0.3.4-82141cff79cef3e295d2be1c3ec85129.conf  base-orphans-0.4.5-2564f6bf3f8ea56dbc79de8e37ae83b6.conf  base64-bytestring-1.0.0.1-c51a530d028bd5ed45a5d898ef0f29b6.conf  bifunctors-5.1-8fd4bbb0f685c06f126e968c57199f7f.conf  blaze-builder-0.4.0.1-1febcf61b3802cffe3d297d4ff2edde9.conf  blaze-builder-enumerator-0.2.1.0-936d9e85abf36a469247f86dcefa7eed.conf  (+84 more)
FrontEnd/: Bullet.elm  Main.elm  elm-package.json  test.elm
app/: Main.hs  MainTest.hs
backend/: Chat.hs  Cors.hs  Main.hs  Message.hs
frontend/: Bullet.elm  Chat.elm  Move.elm  Player.elm  Point.elm  Protocol.elm  Sprites.elm  elm.js  engine.elm  index.html  testChat.elm
frontend/elm-stuff/: exact-dependencies.json
resources/: elm-package.json  elm.js  main.js
resources/elm-stuff/: exact-dependencies.json
src/Backend/: Bullet.hs  Character.hs  Chat.hs  ClientSideGeneration.hs  GameEngine.hs  GameState.elm  GameState.hs  GameStateManagement.hs  Lib.hs  Main.hs  Message.hs  Reactive.hs  UserManagement.hs  World.hs  WorldEngine.hs  WorldManagement.hs  pipeexample.hs
src/Backend/Game/: BoundingSphere.hs  Helper.hs  Map.hs  MapReader.hs
src/Backend/Network/SocketIO/: Reactive.hs
src/Frontend/: Bullet.elm  Chat.elm  Collage.js  DictExtra.elm  Engine.elm  GameState.elm  Helper.elm  Input.elm  Main.elm  Map.elm  Menu.elm  Player.elm  Protocol.elm  Sprites.elm  UserInterface.elm  World.elm  bugelm.elm  engine.elm  input.elm  test.elm  testing.elm
test/BackendSpec/: BulletSpec.hs  CharacterSpec.hs  GameEngineSpec.hs  MessageSpec.hs  WorldEngineSpec.hs
test/BackendSpec/GamingSpec/: BoundingSphereSpec.hs  HelperSpec.hs  MapReaderSpec.hs
test/backend/: Message.hs  MessageSpec.hs
(+31 files in other folders)
