name:                TheLambdaReactor
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bruno-cadorette/TheLambdaReactor
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22.4.0

executable the-lamba-reactor-exe
  hs-source-dirs:      backend
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base,
                    snap >= 0.14.0.6,
                    containers,
                    aeson,
                    text,
                    transformers,
                    stm,
                    snap-core,
                    snap-server,
                    socket-io,
                    engine-io-snap,
                    snap-cors,
                    bytestring
  default-language:    Haskell2010

test-suite spec
  build-depends:  base, hspec == 2.*,
                  snap >= 0.14.0.6,
                  containers,
                  aeson,
                  text,
                  transformers,
                  stm,
                  snap-core,
                  snap-server,
                  socket-io,
                  engine-io-snap,
                  snap-cors,
                  bytestring
  hs-source-dirs: test
  main-is: Spec.hs
  Type: exitcode-stdio-1.0
