name:                TheLambdaReactor
version:             0.1.0.0
synopsis:            Online multiplayer top down shooter
description:         Please see README.md
homepage:            https://github.com/bruno-cadorette/TheLambdaReactor
license:             MIT
license-file:        LICENSE
author:              Bruno Cadorette, Frédéric Branchaud-Charron, Philippe Paul
maintainer:          bruno.cadorette@usherbrooke.ca
copyright:           2016 Bruno Cadorette, Frédéric Branchaud-Charron, Philippe Paul
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22.4.0

executable the-lamba-reactor-exe
  hs-source-dirs:      src/Backend
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base,
                    snap >= 0.14.0.6,
                    containers,
                    aeson,
                    linear,
                    lens,
                    text,
                    transformers,
                    stm,
                    snap-core,
                    snap-server,
                    socket-io,
                    engine-io-snap,
                    snap-cors,
                    bytestring,
                    mtl,
                    reactive-banana >= 1.1.0.0
  default-language:    Haskell2010

test-suite spec
  build-depends:  base, hspec == 2.*,
                  snap >= 0.14.0.6,
                  containers,
                  aeson,
                  text,
                  transformers,
                  stm,
                  linear,
                  lens,
                  snap-core,
                  snap-server,
                  socket-io,
                  engine-io-snap,
                  snap-cors,
                  bytestring,
                  QuickCheck
  hs-source-dirs: test,src/Backend
  main-is: Spec.hs
  Type: exitcode-stdio-1.0
